# toshokan

./: .gitignore  README.md  app.py  env.sample.cfg  pyproject.toml  requirements.txt
apps/api/: pyproject.toml  seed_data.json
apps/api/openapi/: openapi_bundled.yaml  screen_1_login_signup.yaml  screen_3_conversation_daily_goals.yaml  screen_5_conversation_loop_conversation.yaml  screen_5_conversation_loop_dictionary.yaml  spec.yml
apps/api/src/toshokan_api/: __init__.py  __main__.py  auth.py  config.py  main.py  store.py  wiring.py
apps/api/src/toshokan_api/api/: __init__.py  account.py  conversations.py  didascalia.py  health.py  identity.py  tools.py
apps/api/src/toshokan_api/schemas/: __init__.py
apps/api/tests/: conftest.py  test_customer_accounts_api.py  test_customer_accounts_service.py  test_targets_api.py
apps/dashboard/: next.config.ts  orval.config.ts  package-lock.json  package.json
apps/dashboard/app/: page.tsx
apps/dashboard/app/api-stubs/_components/: endpoint-stub.tsx
apps/dashboard/app/api-stubs/v1/conversations/: page.tsx
apps/dashboard/app/api-stubs/v1/situations-suggest/: page.tsx
apps/dashboard/app/login/: page.tsx
apps/dashboard/app/login_done/: page.tsx
apps/dashboard/app/logout_done/: page.tsx
apps/dashboard/src/: config.ts
apps/dashboard/src/api/: client.ts
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/account/: page.tsx
apps/dashboard/src/app/auth/callback/: page.tsx
apps/dashboard/src/app/daily-goals/: page.tsx
apps/dashboard/src/app/login/: page.tsx
apps/dashboard/src/app/login_done/: route.ts
apps/dashboard/src/app/logout_done/: route.ts
apps/dashboard/src/app/targets/: page.tsx
apps/dashboard/src/app/tests/: page.tsx
apps/dashboard/src/components/: dashboard-tabs.tsx  header.tsx
apps/dashboard/src/providers/: auth-provider.tsx  query-provider.tsx
apps/dashboard/src/server/: config.ts
apps/openapi/: spec.yml
artifacts/: exercise_types.csv  known_kanji.csv  lessons.csv  lessons_include.csv  scheduled_kanji.csv
dockerfiles/: Dockerfile.dashboard.single  start.sh
src/toshokan/frontend/: app.py  config.py  dashboard.py  handlers.py  helpers.py  models.py  openrouter.py  schema.py  state_manager.py
src/toshokan/frontend/middleware/: auth.py
src/toshokan/frontend/prompts/: aux.py  breakdown.py  conversation.py  exercise.py  word.py
toshokan_backend/: README.md  pyproject.toml
toshokan_backend/openapi/: openapi_bundled.yaml  screen_0_conversation_general.yaml  screen_2_dashboard.yaml  screen_4_conversation_setup.yaml  screen_5_conversation_loop_didascalia.yaml  screen_5_conversation_loop_didascalia_highlights.yaml  screen_5_conversation_loop_didascalia_kanji.yaml  screen_6_conversation_history.yaml
toshokan_backend/src/toshokan_backend/: __init__.py  __main__.py  auth.py  main.py
toshokan_backend/src/toshokan_backend/api/: conversation_goals.py  conversations.py  dashboard.py  identity.py
toshokan_backend/src/toshokan_backend/schemas/: __init__.py
toshokan_backend/toshokan_backend/: __init__.py  __main__.py
toshokan_dashboard/: orval.config.js  package-lock.json  package.json
toshokan_dashboard/app/: layout.tsx
toshokan_dashboard/app/api-stubs/: page.tsx
toshokan_dashboard/app/api-stubs/_components/: endpoint-stub.tsx
toshokan_dashboard/app/api-stubs/v1/dashboard/: page.tsx
toshokan_dashboard/app/api-stubs/v1/me/: page.tsx
toshokan_dashboard/app/login_done/: page.tsx
toshokan_dashboard/components/: auth-status.tsx  site-header.tsx
toshokan_dashboard/src/app/: layout.tsx  page.tsx
toshokan_dashboard/src/app/conversation-goals/: page.tsx
toshokan_dashboard/src/app/conversations/: page.tsx
toshokan_dashboard/src/app/conversations/[conversationId]/: page.tsx
toshokan_dashboard/src/app/conversations/[conversationId]/preferences/: page.tsx
toshokan_dashboard/src/app/conversations/suggest/: page.tsx
toshokan_dashboard/src/app/dashboard/: page.tsx
toshokan_dashboard/src/app/didascalia/latest/: page.tsx
toshokan_dashboard/src/app/didascalia/turn/: page.tsx
toshokan_dashboard/src/app/me/: page.tsx
toshokan_dashboard/src/app/tools/dictionary/: page.tsx
toshokan_dashboard/src/components/: site-header.tsx
toshokan_dashboard/src/tests/: home.test.tsx  site-header.test.tsx
(+14 files in other folders)
