[project]
name = "toshokan"
version = "0.1.0"
description = "App for assiting in learning the Japanese language"
authors = [
    {name = "ishish.io",email = "ts@ishish.io"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "gradio (>=5.38.2,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "gradio-agentchatbot-5 (>=0.0.11,<0.0.12)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "pandas (>=2.3.1,<3.0.0)"
]

packages = [{include = "toshokan", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
