[project]
name = "toshokan-api"
version = "0.1.0"
description = ""
authors = [
    {name = "ishish.io",email = "ts@ishish.io"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "cryptography (>=46.0.4,<47.0.0)",
    "toshokan-conversation @ file:../../packages/modules/toshokan_conversation",
    "toshokan-goals @ file:../../packages/modules/toshokan_goals"
]
packages = [{include = "toshokan_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
toshokan-conversation = {path = "../../packages/modules/toshokan_conversation", develop = true}
toshokan-goals = {path = "../../packages/modules/toshokan_goals", develop = true}
